client/scss/_base.scss
@font-face {
  font-family: 'Titillium Web';
  font-style: normal;
  font-weight: 300;
  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://fonts.gstatic.com/s/titilliumweb/v4/anMUvcNT0H1YN4FII8wpr6YfJ4wTnNoNUCmOpdh16Tg.woff2) format('woff2'), url(http://fonts.gstatic.com/s/titilliumweb/v4/anMUvcNT0H1YN4FII8wpr1uKlGE8-OjkUKWan_M3D6s.woff) format('woff');
}
@font-face {
  font-family: 'Titillium Web';
  font-style: normal;
  font-weight: 400;
  src: local('Titillium Web'), local('TitilliumWeb-Regular'), url(http://fonts.gstatic.com/s/titilliumweb/v4/7XUFZ5tgS-tD6QamInJTceHuglUR2dhBxWD-q_ehMME.woff2) format('woff2'), url(http://fonts.gstatic.com/s/titilliumweb/v4/7XUFZ5tgS-tD6QamInJTcZ_o9VAbKgK36i-4snuAuCM.woff) format('woff');
}
@font-face {
  font-family: 'Titillium Web';
  font-style: normal;
  font-weight: 600;
  src: local('Titillium WebSemiBold'), local('TitilliumWeb-SemiBold'), url(http://fonts.gstatic.com/s/titilliumweb/v4/anMUvcNT0H1YN4FII8wpr6d1JQt-lS5nD-1TJX2NNl0.woff2) format('woff2'), url(http://fonts.gstatic.com/s/titilliumweb/v4/anMUvcNT0H1YN4FII8wprx3QmhlKDgQgT1VN2Ed1WFo.woff) format('woff');
}

select {
  outline: 0;
  border-radius: 0;
}

* {
  margin: 0;
  padding: 0;

  box-sizing: border-box;
}

body,
html {
  height: 100%;
}

body {
  background: url(/assets/inner-bg.jpg) #ffffff center top no-repeat;
  width: 100%;
  height: 100%;
  overflow: visible;
  font-family: 'Titillium Web', sans-serif;
}

.bbm-wrapper {
  background: rgba(6, 13, 22, .5);
  //background: rgba(14, 27, 43, 0.5);
  padding: 10% 0 10% 0;
}

.bbm-modal {
  background: transparent;
  box-shadow: none;
  width: 70%;
  max-width: 100%;
  border-radius: 0;
  margin: auto;
  background: rgba(6, 13, 22, 0.65);
  padding: 20px 0 0 0;
  display: flex;
  flex-direction: column;
  height: 100%;
}

.btn-sub {
  font-size: 22px;
  color: #6a8097;
}

.bbm-modal__topbar {
  text-align: center;
  margin-bottom: 0;
  padding-bottom: 30px;
}

.bbm-modal__title {
  font-size: 26px;
  color: #8798ac;
  margin: 0 0 20px 0;
}

.bbm-modal__section {
  position: relative;
  -webkit-transform: translate(-50%, 0px);
  transform: translate(-50%, 0px);
  left: 50%;
  width: 80%;
}

.card {
  cursor: pointer;
}

.rights {
  position: fixed;
  bottom: 20px;
  font-size: 14px;
  width: 100%;
  text-align: right;
  color: #8798ac;
  right: 20px;
}

.music-container {
  position: fixed;
  top: 0;
  right: 0;
  transition: all .2s ease-in-out 0s;
  z-index: 20;
  padding: 30px;
}

.music-icon {
  background: url(../../assets/texture/music-mute.png) no-repeat;
  float: right;
  width: 35px;
  height: 33px;
  opacity: .8;
  cursor: pointer;
  transition: all .2s ease-in-out 0s;

  &:hover {
    opacity: 1;
  }

  &.active {
    background: url(../../assets/texture/music.png) no-repeat;
  }
}

.music-options {
  float: right;
  background: #404d5b86;
  padding: 0 5px;
  color: #ffffff;
  clear: both;
  margin: 15px 0 0 0;
  display: none;

  label {
    float: left;
    margin: 4px 10px 0 0;
  }
}

.volume {
  width: 40px;
  background: none;
  border: 0;
  padding: 5px;
  float: left;
  margin: 0 15px 0 0;
  text-align: center;
}

